# ml-eng-tutorials

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: server.ipynb
src/app/: main.py
src/modelling_scripts/: train.py
