[tool.poetry]
name = "ml-eng-tutorials"
version = "0.1.0"
description = "Code for tutorials under the course ML Eng in Production"
authors = ["Jean Githae"]
readme = "README.md"
packages = [{include = "ml_eng_tutorials"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
